--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta name="robots" content="index" />
     <meta
       name="description"
-      content="Markdown Previewer project for freeCodeCamp Frontend Libraries Certification"
+      content="Drum Machine project for freeCodeCamp Frontend Libraries Certification"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
